# tutor-contrib-mfe-extensions

./: CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
changelog.d/: 20260513_172545_moises.gonzalez_add_admin_console.md
tutormfe_extensions/: __about__.py  plugin.py
tutormfe_extensions/patches/: caddyfile-cms  caddyfile-frontend-site-assets  caddyfile-lms  caddyfile-mfe-by-path  k8s-override  kustomization-configmapgenerator  kustomization-patches-strategic-merge  mfe-dockerfile-final  mfe-dockerfile-post-npm-install-course-authoring  mfe-dockerfile-post-npm-install-discussions  mfe-dockerfile-post-npm-install-learning  mfe-dockerfile-post-npm-install-profile  mfe-dockerfile-pre-npm-build  mfe-dockerfile-production-final  openedx-cms-production-settings  openedx-common-settings  openedx-lms-production-settings
tutormfe_extensions/templates/mfe_extensions/apps/: docker-entrypoint.sh
tutormfe_extensions/templates/mfe_extensions/k8s/: mfe-deployment-overrides.yml
