[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tutor-contrib-mfe-extensions"
dynamic = ["version"]
description = "mfe_extensions plugin for Tutor"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Moisés González" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tutor>=19.0.0",
    "tutor-mfe>=19.0.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "python-semantic-release",
]

[project.urls]
Homepage = "https://github.com/edunext/tutor-contrib-mfe-extensions"
Code = "https://github.com/edunext/tutor-contrib-mfe-extensions"
"Issue tracker" = "https://github.com/edunext/tutor-contrib-mfe-extensions/issues"

[project.entry-points."tutor.plugin.v1"]
mfe_extensions = "tutormfe_extensions.plugin"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = {attr = "tutormfe_extensions.__about__.__version__"}

[tool.wheel]
universal = true

[tool.semantic_release]
commit_message = "chore(release): preparing {version}"
version_variables = [
    "tutormfe_extensions/__about__.py:__version__",
]

[tool.semantic_release.branches.main]
match = "(main|master)"

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  "docs:",
  "build:",
  "style:",
  "chore:",
  "test:",
  "revert:",
  "perf:",
  "refactor:",
  "ci:",
]
