[project]
name = "tutor-contrib-mfe-extensions"
version = "21.0.0"
description = "mfe_extensions plugin for Tutor"
readme = "README.md"
requires-python = ">=3.10"
license-files = [ "LICENSE" ]
authors = [
    { name = "Moisés González" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tutor~=21.0",
    "tutor-mfe~=21.0",
]

[project.urls]
Homepage = "https://github.com/edunext/tutor-contrib-mfe-extensions"
Code = "https://github.com/edunext/tutor-contrib-mfe-extensions"
"Issue tracker" = "https://github.com/edunext/tutor-contrib-mfe-extensions/issues"

[project.entry-points."tutor.plugin.v1"]
mfe-extensions = "tutormfe_extensions.plugin"

[tool.wheel]
universal = true

[tool.ruff]
line-length = 120
indent-width = 4
lint.select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",
  "UP",
]

[tool.scriv]
version = "literal: pyproject.toml: project.version"
categories = "Added, Changed, Fixed, Removed"
format = "md"
md_header_level = 2
new_fragment_template = "file: changelog.d/scriv/new_fragment.md.j2"
entry_title_template = "file: changelog.d/scriv/entry_title.md.j2"

[tool.uv.build-backend]
module-root = "."
module-name = "tutormfe_extensions"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "scriv>=1.7.0",
    "ty>=0.0.1a29",
]
